mobile-version-button-overlap-issue

--- a/templates/qmn_primary.css
+++ b/templates/qmn_primary.css
@@ -1,7 +1,7 @@
 .qsm-progress-bar {
   position: relative;
   flex-grow: 2;
-  padding: 0 10px;
+  padding: 0px 10px 8px 10px
 }
 
 .ui-tooltip {
